--- a/2 полугодие/конспект параграфа.md
+++ b/2 полугодие/конспект параграфа.md
@@ -1,6 +1,10 @@
-Моделирование распределения температуры
-Задача теплопроводности
-Теплопроводность - это процесс распространения тела в сплошной среде: твердом теле, жидкости или газе.
+**Моделирование распределения температуры**
 
+***Задача теплопроводности***
 
-$ h = \frac{a}{N} = \frac{b}{M} $
+*Теплопроводность* - это процесс распространения тела в сплошной среде: твердом теле, жидкости или газе.
+
+$$ h = \frac{a}{N} = \frac{b}{M} $$
+
+$$ T(x,y) = 100\frac{y}{b} $$
+
