--- a/2 полугодие/конспект параграфа.md
+++ b/2 полугодие/конспект параграфа.md
@@ -8,3 +8,5 @@ $$ h = \frac{a}{N} = \frac{b}{M} $$
 
 $$ T(x,y) = 100\frac{y}{b} $$
 
+![image](https://user-images.githubusercontent.com/114469293/223333667-f54dcf23-7cbf-4708-87a0-da0e0dfcc378.png)
+
