--- a/2 полугодие/конспект параграфа.md
+++ b/2 полугодие/конспект параграфа.md
@@ -10,3 +10,4 @@ $$ T(x,y) = 100\frac{y}{b} $$
 
 ![image](https://user-images.githubusercontent.com/114469293/223333667-f54dcf23-7cbf-4708-87a0-da0e0dfcc378.png)
 
+![image](https://user-images.githubusercontent.com/114469293/223334510-c49ccf79-f5c9-4e06-8508-6d22a6f75efd.png)
