--- a/2 полугодие/конспект параграфа.md
+++ b/2 полугодие/конспект параграфа.md
@@ -12,3 +12,4 @@ $$ T(x,y) = 100\frac{y}{b} $$
 
 ![image](https://user-images.githubusercontent.com/114469293/223334723-56ea0c1d-1ba7-4b42-b02b-82001e1edd6c.png)
 
+![image](https://user-images.githubusercontent.com/114469293/223335333-9341c0cc-c49b-439f-a483-8fe9b30540d2.png)
